<resources>
    <string name="app_name">Code Club Brasil</string>
    <string name="cadastro">Cadastro</string>
    <string name="spinnerEstado">Espaço para selecionar seu Estado</string>
    <string name="espacoNome">NOME:</string>
    <string name="espacoSobrenome">SOBRENOME:</string>
    <string name="espacoCidade">CIDADE:</string>
    <string name="logoCodeClub">Logotipo do Code Club</string>
    <string name="textVoluntario">JÁ É VOLUNTÁRIO?</string>
    <string name="codeclubbrasil">Code Club Brasil</string>
    <string name="bemvindoaoclub">Bem vindo ao</string>
    <string name="botaocadastrar">Cadastrar</string>
    <string name="entrar"> ENTRAR</string>
    <string name="textEntrar">Entrar</string>
    <string name="espacoTelefone">TELEFONE:</string>
    <string name="espacoEmail">E-MAIL:</string>
    <string name="espacoSenha">SENHA:</string>
    <string name="botaoContinuar">Continuar</string>
    <string name="termosCondicoes">Ao se cadastrar, você concorda com nossos </string>
    <string name="termosCondicoes2"> Termos e condições.</string>
    <string name="botaoEntrar">JÁ É VOLUNTÁRIO? ENTRAR</string>
    <string name="textFotoPerfil">Foto do perfil</string>
    <string name="botaoNovaFoto">Enviar nova</string>
    <string name="descricaoImagem">Foto de perfil</string>
    <string name="textAnexarDocumento">Anexar Documento</string>7
    <string name="textAntecedentesCriminais">Antecedentes Criminais</string>
    <string name="botaoEnviarArquivo">Enviar Arquivo</string>
    <string name="botaoFinalizar">Finalizar</string>
    <string name="botaoAindaNaoTemCadastro">Ainda não tem cadastro?</string>
    <string name="stringOlaUsuario">Olá, Voluntário!</string>
    <string name="botaoBuscarCodeClub">Buscar Code Clubs</string>
    <string name="botaoCriarCodeClub">Criar um novo Code Club</string>
    <string name="botaoTreinamentos">Treinamentos</string>
    <string name="botaoComunidade">Comunidade</string>
    <string name="botaoSair">Sair</string>
    <string name="textoPerfil">Perfil</string>
    <string name="botaoDisponibilidade">Escala de disponibilidade</string>
    <string name="botaoAlteraSenha">Alterar senha</string>
    <string name="botaoRemoverCadastro">Remover cadastro</string>
    <string name="botaoEditarPerfil">Editar perfil</string>
    <string name="bairro">BAIRRO:</string>
    <string name="conhecimento">CONHECIMENTO:</string>

    <string name="btnFotoTeste">SELECIONAR FOTO:</string>
    <string name="btnByteArray">SALVAR BYTE ARRAY:</string>


</resources>