<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Logado">

    <ImageView
        android:id="@+id/imgProfileLogado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descricaoImagem"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringOlaUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfileLogado"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonBuscarCodeClub"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/botaoBuscarCodeClub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonCriarCodeClub"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/botaoCriarCodeClub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscarCodeClub" />

    <Button
        android:id="@+id/buttonTreinamentos"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/botaoTreinamentos"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCriarCodeClub" />

    <Button
        android:id="@+id/buttonComunidade"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/botaoComunidade"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTreinamentos" />

        <Button
            android:id="@+id/buttonEditarPerfil"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/botaoEditarPerfil"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonComunidade" />

        <Button
            android:id="@+id/buttonSair"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/botaoSair"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEditarPerfil"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>